@@ -15,3 +15,7 @@ check http.get "chameth.com" {
     url = "https://chameth.com/"
     content = "Personal Homepage of Chris Smith"
 }
+
+plugin http {
+    foo = "bar"
+}
