@@ -1,0 +1,42 @@
+{
+  "DefaultSettings": {
+    "alerts": [
+      "text",
+      "foo",
+      "bar"
+    ],
+    "good_threshold": 3,
+    "interval": 90000000000
+  },
+  "AlertBlocks": [
+    {
+      "Name": "text",
+      "Type": "twilio.message",
+      "Settings": {
+        "from": "+44 ...",
+        "sid": "xxx",
+        "to": "+44 ....",
+        "token": "yyy"
+      }
+    }
+  ],
+  "CheckBlocks": [
+    {
+      "Name": "chameth.com",
+      "Type": "http.get",
+      "Settings": {
+        "content": "Personal Homepage of Chris Smith",
+        "url": "https://chameth.com/"
+      }
+    }
+  ],
+  "PluginSettings": [
+    {
+      "Name": "",
+      "Type": "http",
+      "Settings": {
+        "foo": "bar"
+      }
+    }
+  ]
+}
